# routes/trade.js
@@ -1,7 +1,7 @@
 const express = require('express');
 const router = express.Router();
 const jwt = require('jsonwebtoken');
-const {addTrade} = require('../func.js');
+const {addNewTrade, findUser, profileCards, countOccurrences} = require('../func.js');
 
 /* 
 Impostazione del trade
@@ -9,8 +9,7 @@ const trade = {
     id,
     user1: { id: user1Id, offered_cards: [ cards offered by user1 ] },
     user2: { id: user2Id, offered_cards: [ cards offered by user2 ] },
-    status: 'pending' | 'completed' | 'cancelled',
-    // Altri dettagli, come la data di creazione, eventuali messaggi, ecc.
+    status: 'pending' | 'completed' | 'cancelled'
 }; 
 */
 
@@ -27,10 +26,23 @@ router.post('/add', async (req, res) => {
         return res.status(403).send({ error: "Accesso non autorizzato" });
     }
     jwt.verify(token, process.env.secret_key, async (err, decoded) => {
+        const user = await findUser(decoded.username);
+        const user_cards = await profileCards(user.data.username);
+        // Controlli sulle carte da scambiare
+        // Devo controllare che l'utente possa offrire solo carte di cui ha almeno 2 copie
+        if(!cards.every(card =>  countOccurrences(user_cards, card) >= 2)){
+            return res.status(400).send({ message: "Non puoi offrire carte di cui hai meno di 2 copie" });
+        }
 
 
+        await addNewTrade(user.data.username, cards).then((result) => {
+            if(result.success){
+                return res.status(200).send({ message: "Trade inserito con successo" });
+            } else {
+                return res.status(500).send({ message: "Errore durante l'inserimento del trade." });
+            }
+        }); 
 
-        await addTrade(decoded.username, cards) 
     })   
 })
 
